--- a/app/src/main/res/layout/fragment_reporte_pedido.xml
+++ b/app/src/main/res/layout/fragment_reporte_pedido.xml
@@ -13,7 +13,7 @@
         <FrameLayout
             android:id="@+id/fl_cabecera"
             android:layout_width="match_parent"
-            android:layout_height="78dp"
+            android:layout_height="80dp"
             android:background="@drawable/background_rounded_container_invertido"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,19 +25,19 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_desde"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="4dp"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    app:hintEnabled="false"
-                    app:boxBackgroundColor="@color/blanco"
-                    app:boxStrokeColor="@color/negro_semitransparente"
-                    app:boxCornerRadiusBottomEnd="13dp"
-                    app:boxCornerRadiusBottomStart="13dp"
-                    app:boxCornerRadiusTopEnd="13dp"
-                    app:boxCornerRadiusTopStart="13dp"
+                    android:layout_marginEnd="16dp"
+                    app:boxBackgroundColor="@color/colorVibrantLight"
+                    app:boxCornerRadiusBottomEnd="15dp"
+                    app:boxCornerRadiusBottomStart="15dp"
+                    app:boxCornerRadiusTopEnd="15dp"
+                    app:boxCornerRadiusTopStart="15dp"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
                     app:layout_constraintEnd_toStartOf="@+id/til_hasta"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
@@ -50,26 +50,26 @@
                         android:layout_height="wrap_content"
                         android:focusableInTouchMode="false"
                         android:gravity="center"
+                        android:hint="@string/desde"
                         android:inputType="none"
-                        android:textColorHint="@color/negro_semitransparente"
-                        android:hint="@string/desde" />
+                        android:textColorHint="@color/negro_semitransparente" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_hasta"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="4dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    app:hintEnabled="false"
-                    app:boxBackgroundColor="@color/blanco"
-                    app:boxStrokeColor="@color/negro_semitransparente"
-                    app:boxCornerRadiusBottomEnd="13dp"
-                    app:boxCornerRadiusBottomStart="13dp"
-                    app:boxCornerRadiusTopEnd="13dp"
-                    app:boxCornerRadiusTopStart="13dp"
+                    android:layout_marginEnd="16dp"
+                    app:boxBackgroundColor="@color/colorVibrantLight"
+                    app:boxCornerRadiusBottomEnd="15dp"
+                    app:boxCornerRadiusBottomStart="15dp"
+                    app:boxCornerRadiusTopEnd="15dp"
+                    app:boxCornerRadiusTopStart="15dp"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/til_desde"
@@ -82,9 +82,9 @@
                         android:layout_height="wrap_content"
                         android:focusableInTouchMode="false"
                         android:gravity="center"
+                        android:hint="@string/hasta"
                         android:inputType="none"
-                        android:textColorHint="@color/negro_semitransparente"
-                        android:hint="@string/hasta" />
+                        android:textColorHint="@color/negro_semitransparente" />
                 </com.google.android.material.textfield.TextInputLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
