--- a/app/src/main/res/drawable/background_rounded_container_body.xml
+++ b/app/src/main/res/drawable/background_rounded_container_body.xml
@@ -9,22 +9,22 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/purple_200" />
-            <corners android:radius="20dp" />
+            <corners android:radius="25dp" />
         </shape>
     </item>
 
     <item
-        android:bottom="2dp"
+        android:bottom="0dp"
         android:left="0dp"
         android:right="0dp"
-        android:top="0dp">
+        android:top="2dp">
         <shape>
-            <solid android:color="@color/purple_500" />
+            <solid android:color="@color/blanco" />
             <corners
-                android:bottomLeftRadius="20dp"
-                android:bottomRightRadius="20dp"
-                android:topLeftRadius="0dp"
-                android:topRightRadius="0dp" />
+                android:bottomLeftRadius="0dp"
+                android:bottomRightRadius="0dp"
+                android:topLeftRadius="25dp"
+                android:topRightRadius="25dp" />
         </shape>
     </item>
 </layer-list>
