--- a/app/src/main/res/layout/fragment_catalogo_producto.xml
+++ b/app/src/main/res/layout/fragment_catalogo_producto.xml
@@ -13,7 +13,7 @@
         <FrameLayout
             android:id="@+id/fl_cabecera"
             android:layout_width="match_parent"
-            android:layout_height="78dp"
+            android:layout_height="80dp"
             android:background="@drawable/background_rounded_container_invertido"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -25,21 +25,22 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/tilBuscar"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    app:hintEnabled="false"
-                    app:boxBackgroundColor="@color/blanco"
-                    app:boxStrokeColor="@color/negro_semitransparente"
-                    app:boxCornerRadiusBottomEnd="13dp"
-                    app:boxCornerRadiusBottomStart="13dp"
-                    app:boxCornerRadiusTopEnd="13dp"
-                    app:boxCornerRadiusTopStart="13dp"
-                    app:startIconDrawable="@drawable/ic_search"
+                    android:layout_marginEnd="16dp"
+                    app:boxBackgroundColor="@color/colorVibrantLight"
+                    app:boxCornerRadiusBottomEnd="15dp"
+                    app:boxCornerRadiusBottomStart="15dp"
+                    app:boxCornerRadiusTopEnd="15dp"
+                    app:boxCornerRadiusTopStart="15dp"
+                    app:boxStrokeWidth="0dp"
+                    app:boxStrokeWidthFocused="0dp"
                     app:endIconMode="clear_text"
+                    app:hintEnabled="false"
+                    app:startIconDrawable="@drawable/ic_search"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
