--- a/app/src/main/res/layout/items_catalogo.xml
+++ b/app/src/main/res/layout/items_catalogo.xml
@@ -9,19 +9,20 @@
         android:id="@+id/cv_matriz"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         app:cardCornerRadius="10dp"
-        app:strokeColor="@color/grisOscuroColor"
-        app:strokeWidth="1dp"
         app:cardForegroundColor="@android:color/transparent"
         app:contentPadding="1dp"
+        app:cardElevation="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="@color/grisOscuroColor"
+        app:strokeWidth="1dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_detalle"
@@ -47,10 +48,10 @@
                     android:layout_marginEnd="4dp"
                     android:layout_marginBottom="2dp"
                     android:ellipsize="end"
+                    android:fontFamily="@font/roboto_condensed_regular"
                     android:maxLines="2"
                     android:text="@string/descripcion"
                     android:textSize="16sp"
-                    android:fontFamily="@font/roboto_condensed_regular"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/ib_agregar"
                     app:layout_constraintStart_toStartOf="parent"
