--- a/app/src/main/res/layout/fragment_reporte_pedido.xml
+++ b/app/src/main/res/layout/fragment_reporte_pedido.xml
@@ -25,19 +25,19 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_desde"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="8dp"
-                    android:layout_marginEnd="16dp"
-                    app:boxBackgroundColor="@color/colorVibrantLight"
+                    android:layout_marginEnd="8dp"
                     app:boxCornerRadiusBottomEnd="15dp"
                     app:boxCornerRadiusBottomStart="15dp"
                     app:boxCornerRadiusTopEnd="15dp"
                     app:boxCornerRadiusTopStart="15dp"
                     app:boxStrokeWidth="0dp"
                     app:boxStrokeWidthFocused="0dp"
+                    app:boxBackgroundColor="@color/colorVibrantLight"
+                    app:boxStrokeColor="@color/negro_semitransparente"
                     app:layout_constraintEnd_toStartOf="@+id/til_hasta"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
@@ -57,21 +57,20 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/til_hasta"
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="16dp"
-                    app:boxBackgroundColor="@color/colorVibrantLight"
                     app:boxCornerRadiusBottomEnd="15dp"
                     app:boxCornerRadiusBottomStart="15dp"
                     app:boxCornerRadiusTopEnd="15dp"
                     app:boxCornerRadiusTopStart="15dp"
                     app:boxStrokeWidth="0dp"
                     app:boxStrokeWidthFocused="0dp"
+                    app:boxBackgroundColor="@color/colorVibrantLight"
+                    app:boxStrokeColor="@color/negro_semitransparente"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/til_desde"
                     app:layout_constraintTop_toTopOf="parent"
                     app:startIconDrawable="@drawable/ic_date_range">
