--- a/app/src/main/res/layout/items_pedido.xml
+++ b/app/src/main/res/layout/items_pedido.xml
@@ -13,7 +13,9 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         app:cardCornerRadius="10dp"
-        app:cardElevation="6dp"
+        app:cardElevation="4dp"
+        app:strokeColor="@color/purple_200"
+        app:strokeWidth="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +49,7 @@
                     android:maxLines="2"
                     android:text="TITULO"
                     android:textSize="16sp"
+                    android:textColor="@color/colorPrimaryText"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/tv_fecha"
                     app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +65,7 @@
                     android:text="@string/fecha_hora_digito"
                     android:textAlignment="center"
                     android:textSize="12sp"
+                    android:textColor="@color/colorPrimaryText"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/bt_anular"
                     app:layout_constraintTop_toTopOf="parent" />
