--- a/app/src/main/res/layout/items_pedido_realizado.xml
+++ b/app/src/main/res/layout/items_pedido_realizado.xml
@@ -15,13 +15,13 @@
         android:layout_marginBottom="8dp"
         android:theme="@style/Theme.MaterialComponents.Light"
         app:cardCornerRadius="10dp"
-        app:cardElevation="6dp"
+        app:cardElevation="4dp"
         app:cardForegroundColor="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/grisOscuroColor"
+        app:strokeColor="@color/purple_200"
         app:strokeWidth="1dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,7 +34,7 @@
                 android:id="@+id/cl_titulo"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@color/grisColor"
+                android:background="@color/colorVibrantLight"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
