--- a/app/src/main/res/layout/items_pedido.xml
+++ b/app/src/main/res/layout/items_pedido.xml
@@ -8,18 +8,18 @@
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="8dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="4dp"
-        app:strokeColor="@color/purple_200"
-        app:strokeWidth="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:strokeColor="@color/purple_200"
+        app:strokeWidth="1dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_matrix"
@@ -48,8 +48,8 @@
                     android:fontFamily="@font/roboto_condensed_regular"
                     android:maxLines="2"
                     android:text="TITULO"
-                    android:textSize="16sp"
                     android:textColor="@color/colorPrimaryText"
+                    android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/tv_fecha"
                     app:layout_constraintStart_toStartOf="parent"
@@ -64,8 +64,8 @@
                     android:maxLines="2"
                     android:text="@string/fecha_hora_digito"
                     android:textAlignment="center"
-                    android:textSize="12sp"
                     android:textColor="@color/colorPrimaryText"
+                    android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/bt_anular"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -104,8 +104,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Cliente:"
                 android:fontFamily="@font/comfortaa_regular"
+                android:text="Cliente:"
                 android:textSize="12sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="@+id/cl_titulo"
@@ -118,8 +118,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text="Nombre cliente"
                 android:fontFamily="@font/roboto_condensed_regular"
+                android:text="Nombre cliente"
                 app:layout_constraintEnd_toEndOf="@+id/cl_titulo"
                 app:layout_constraintStart_toEndOf="@+id/textView3"
                 app:layout_constraintTop_toBottomOf="@+id/cl_titulo" />
