--- a/app/src/main/res/layout/items_producto.xml
+++ b/app/src/main/res/layout/items_producto.xml
@@ -8,22 +8,22 @@
         android:id="@+id/cv_matrix"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="8dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:theme="@style/Theme.MaterialComponents.Light"
         app:cardCornerRadius="10dp"
-        app:cardElevation="6dp"
+        app:cardElevation="4dp"
         app:cardForegroundColor="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/grisOscuroColor"
+        app:strokeColor="@color/purple_200"
         app:strokeWidth="1dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,7 +36,10 @@
                 android:id="@+id/cl_titulo"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@color/grisColor"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/round_corner_view"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -50,7 +53,7 @@
                     android:ellipsize="end"
                     android:fontFamily="@font/roboto_condensed_regular"
                     android:maxLines="1"
-                    android:text="TITULO"
+                    android:text="@string/titulo"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/ib_editar"
@@ -76,7 +79,7 @@
                     android:layout_width="40sp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
-                    android:layout_marginEnd="2dp"
+                    android:layout_marginEnd="8dp"
                     android:src="@drawable/ic_delete"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -89,9 +92,9 @@
                 android:id="@+id/ll_importe"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1.0"
                 android:orientation="horizontal"
