--- a/app/src/main/res/layout/items_catalogo.xml
+++ b/app/src/main/res/layout/items_catalogo.xml
@@ -9,19 +9,19 @@
         android:id="@+id/cv_matriz"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="8dp"
         app:cardCornerRadius="10dp"
+        app:cardElevation="4dp"
         app:cardForegroundColor="@android:color/transparent"
         app:contentPadding="1dp"
-        app:cardElevation="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/grisOscuroColor"
+        app:strokeColor="@color/purple_200"
         app:strokeWidth="1dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,7 +33,10 @@
                 android:id="@+id/cl_titulo"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="@color/grisColor"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/round_corner_view"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -68,7 +71,8 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/ic_add_circle" />
+                    app:srcCompat="@drawable/ic_add_circle"
+                    android:contentDescription="@string/contentDescription" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -78,7 +82,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/comfortaa_regular"
@@ -94,7 +98,7 @@
                 android:id="@+id/textView55"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="@font/comfortaa_regular"
